--- a/download.html
+++ b/download.html
@@ -21,31 +21,31 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.4.1/xowa_app_windows_64_v2.11.4.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.12.1.1/xowa_app_windows_64_v2.12.1.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.4.1/xowa_app_windows_v2.11.4.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.12.1.1/xowa_app_windows_v2.12.1.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.4.1/xowa_app_linux_64_v2.11.4.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.12.1.1/xowa_app_linux_64_v2.12.1.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.4.1/xowa_app_linux_v2.11.4.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.12.1.1/xowa_app_linux_v2.12.1.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.4.1/xowa_app_macosx_64_v2.11.4.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.12.1.1/xowa_app_macosx_64_v2.12.1.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.11.4.1/xowa_app_macosx_v2.11.4.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.12.1.1/xowa_app_macosx_v2.12.1.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.11.4.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.12.1.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -54,51 +54,54 @@
       <span class='mw-headline'>Change log</span>
     </h2>
     <h2>
-      <span class="mw-headline" id="v2.11.4.1_.282015-11-22.29">v2.11.4.1 (2015-11-22)</span>
+      <span class="mw-headline" id="v2.12.1.1_.282015-12-07.29">v2.12.1.1 (2015-12-07)</span>
     </h2>
-    <p>
-      <b>fix</b>
-    </p>
-    <ul>
-      <li>
-        Parser.Template: Do not trim whitespace from end of template arg (affects many fr.w pages with many single-letter paragraphs (citation bloc)). See: <a href="https://fr.wikipedia.org/wiki/Histoire_de_la_marine_française_sous_Louis_XV_et_Louis_XVI">https://fr.wikipedia.org/wiki/Histoire_de_la_marine_française_sous_Louis_XV_et_Louis_XVI</a> [broken since:v2.11.2]
-      </li>
-      <li>
-        Category: Fix category pages not loading. See: <a href="https://simple.wikipedia.org/wiki/Category:Computer_science">https://simple.wikipedia.org/wiki/Category:Computer_science</a>
-      </li>
-    </ul>
     <p>
       <b>package</b>
     </p>
     <ul>
       <li>
-        Package: Release image update for French wikis (2015-11). See: <a href="https://archive.org/details/Xowa_frwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_frwiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Lithuanian wikis (2015-11). See: <a href="https://archive.org/details/Xowa_ltwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_ltwiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Limburgish wikis (2015-11). See: <a href="https://archive.org/details/Xowa_liwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_liwiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Estonian wikis (2015-11). See: <a href="https://archive.org/details/Xowa_etwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_etwiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Latvian wikis (2015-11). See: <a href="https://archive.org/details/Xowa_lvwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_lvwiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Nynorsk wikis (2015-11). See: <a href="https://archive.org/details/Xowa_nnwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_nnwiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Cebuano wikis (2015-11). See: <a href="https://archive.org/details/Xowa_cebwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_cebwiki_latest</a>
+        Package: Release image update for Italian wikis (2015-11). See: <a href="https://archive.org/details/Xowa_itwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_itwiki_latest</a>
       </li>
     </ul>
     <p>
-      <b>significant</b>
+      <b>change</b>
     </p>
     <ul>
       <li>
-        Parser.Table: Ignore content after "|" if on same line as "|-" (affects several li.w pages with stray text at top of page); EX:"\n|-|&lt;b&gt;a&lt;/b&gt;\n" -&gt; "&lt;b&gt;a&lt;/b&gt;" should not show. See: <a href="https://lv.wikipedia.org/wiki/Starptautiskā_kosmosa_stacija">https://lv.wikipedia.org/wiki/Starptautiskā_kosmosa_stacija</a>
+        References: Do not duplicate references if inside &lt;poem&gt; within a &lt;page&gt; (affects duplicate references on many wikisource pages). See: <a href="https://it.wikisource.org/wiki/La_Secchia_rapita/Canto_primo">https://it.wikisource.org/wiki/La_Secchia_rapita/Canto_primo</a>
+      </li>
+      <li>
+        Poem: Handle recursive poems particularly inside references (affects poems showing incorrect reference text). See: <a href="https://it.wikisource.org/wiki/La_Secchia_rapita/Canto_primo">https://it.wikisource.org/wiki/La_Secchia_rapita/Canto_primo</a>
+      </li>
+      <li>
+        ImageMap: Do not clear scribunto for image map (affects script error on many dozen it.s pages). See: <a href="https://it.wikisource.org/wiki/La_guerra_del_vespro_siciliano/Indice">https://it.wikisource.org/wiki/La_guerra_del_vespro_siciliano/Indice</a> <a href="https://it.wikisource.org/wiki/Delle_Frascherie_di_Antonio_Abati_fasci_tre/Tavola_delle_poesie">https://it.wikisource.org/wiki/Delle_Frascherie_di_Antonio_Abati_fasci_tre/Tavola_delle_poesie</a> <a href="https://it.wikisource.org/wiki/Pensieri_e_giudizi/Indice_dei_nomi">https://it.wikisource.org/wiki/Pensieri_e_giudizi/Indice_dei_nomi</a> <a href="https://it.wikisource.org/wiki/Patria_Esercito_Re/Indice_generale">https://it.wikisource.org/wiki/Patria_Esercito_Re/Indice_generale</a>
+      </li>
+      <li>
+        Scribunto.Text: Detect integer keys for json_decode (affects script error on 1 it.s page). See: <a href="https://it.wikisource.org/wiki/Il_Re_Cervo">https://it.wikisource.org/wiki/Il_Re_Cervo</a>
+      </li>
+      <li>
+        Xtn.Mapsources: Handle coordinates with ’’ (affects script error on 1 it.v page). See: <a href="https://it.wikivoyage.org/wiki/Morro_d%27Oro">https://it.wikivoyage.org/wiki/Morro_d'Oro</a>
+      </li>
+    </ul>
+    <p>
+      <b>minor</b>
+    </p>
+    <ul>
+      <li>
+        Parser.Table: Ignore sequences like "\n| ... ||" (affects broken table on 1 nl.w page). See: <a href="https://nl.wikipedia.org/wiki/Tabel_van_Belgische_gemeenten">https://nl.wikipedia.org/wiki/Tabel_van_Belgische_gemeenten</a>
+      </li>
+      <li>
+        File: Handle invalid file-system characters for file titles (affects files with quotes and other invalid file-system characters not downloaded when clicking on image). See: <a href="https://en.wikipedia.org/wiki/File:Volc%C3%A1n_Chimborazo,_%22El_Taita_Chimborazo%22.jpg">https://en.wikipedia.org/wiki/File:Volcán_Chimborazo,_%22El_Taita_Chimborazo%22.jpg</a>
+      </li>
+      <li>
+        Html: Encode quotes for xowa_title (affects files not downloadable if file name has quotes); EX:xowa_title="A"B.png". See: <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
+      </li>
+      <li>
+        Html: Encode headers with literal Category links (affects table of contents link not working if section header has category link); EX:[[:Category:A]] -&gt; id="Category:A" x&gt; "". See: <a href="https://simple.wikipedia.org/wiki/Wikipedia:Requests_for_deletion/Log_1">https://simple.wikipedia.org/wiki/Wikipedia:Requests_for_deletion/Log_1</a>
+      </li>
+      <li>
+        Interwiki: Show "[[nb:]]" and "[[lzh:]]" in "In other languages". See: <a href="https://nn.wikipedia.org/wiki/">https://nn.wikipedia.org/wiki/</a>
       </li>
     </ul>
     <p>
@@ -106,18 +109,30 @@
     </p>
     <ul>
       <li>
-        Html: Write full namespace for anchor titles; EX:[[Help talk:A]] -&gt; "title='Help talk:A'" x&gt; "title='A'".
+        Namespace: Standardize talk names to underscore, not space; EX:"Help_talk" not "Help talk".
       </li>
       <li>
-        Html: Do not write "rel=nofollow" if image is link to Wikimedia wiki; EX:[[File:A.png|link=//en.wiktionary.org/wiki/a]] -&gt; "" x&gt; "rel='nofollow'".
+        Html: Do not write "title" if empty; EX:title="".
+      </li>
+      <li>
+        Html: Convert spaces to underscores for link arguments; EX:[[File:A.png|link=File:A b.ogg]] -&gt; "/wiki/A_b.ogg" x&gt; "/wiki/A_b.ogg".
+      </li>
+      <li>
+        Html: Convert tab / new-lines to spaces for titles; EX:[[A|B\nC]].
+      </li>
+      <li>
+        Html: Convert quotes in internal links for titles (affects garbled titles for some images); EX:[[A|B"C]].
+      </li>
+      <li>
+        Make.Images: Ignore files with no text (affects generates log errors of "failed to parse page_name error"). See: <a href="https://it.wiktionary.org/wiki/miercuri">https://it.wiktionary.org/wiki/miercuri</a>
       </li>
     </ul>
     <p>
-      <b>dev</b>
+      <b>doc</b>
     </p>
     <ul>
       <li>
-        Source: Refactor Gfo_url_encoder.
+        Website: Fix links for French Wikipedia text {detected by anonymous}. See: <a href="https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_text.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_frwiki_latest/Xowa_frwiki_2015-11-02_text.7z</a>
       </li>
     </ul>
     
