--- a/image_dbs.html
+++ b/image_dbs.html
@@ -1097,76 +1097,69 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://it.wikipedia.org/wiki/">https://it.wikipedia.org</a>
+            <a href="/site/it.wikipedia.org/wiki/">https://it.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-02-24
+            2015-11-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            33
+            21.7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-02-24_wiki.7z" class="external text" rel="nofollow">wiki: 2015-02-24</a><br>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2014-01-27_images_001.7z" class="external text" rel="nofollow">images: 2014-01-27 #1</a><br>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2014-01-27_images_002.7z" class="external text" rel="nofollow">images: 2014-01-27 #2</a><br>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2014-01-27_images_003.7z" class="external text" rel="nofollow">images: 2014-01-27 #3</a><br>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2014-01-27_images_004.7z" class="external text" rel="nofollow">images: 2014-01-27 #4</a><br>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2014-06-12_images_update.7z" class="external text" rel="nofollow">images: 2014-06-12</a><br>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-02-24_images_update.7z" class="external text" rel="nofollow">images: 2015-02-24</a><br>
+            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-11-02_text.7z" rel="nofollow" class="external text">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-11-02_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-11-02_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-11-02_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-11-02_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itwiki_2015-11-02_file_ns-100.7z" rel="nofollow" class="external text">images.other</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://it.wiktionary.org/wiki/">https://it.wiktionary.org</a><br>
-            <a href="https://it.wikisource.org/wiki/">https://it.wikisource.org</a><br>
-            <a href="https://it.wikivoyage.org/wiki/">https://it.wikivoyage.org</a><br>
-            <a href="https://it.wikiquote.org/wiki/">https://it.wikiquote.org</a><br>
-            <a href="https://it.wikibooks.org/wiki/">https://it.wikibooks.org</a><br>
-            <a href="https://it.wikiversity.org/wiki/">https://it.wikiversity.org</a><br>
-            <a href="https://it.wikinews.org/wiki/">https://it.wikinews.org</a><br>
+            <a href="/site/it.wiktionary.org/wiki/">https://it.wiktionary.org</a><br>
+            <a href="/site/it.wikisource.org/wiki/">https://it.wikisource.org</a><br>
+            <a href="/site/it.wikivoyage.org/wiki/">https://it.wikivoyage.org</a><br>
+            <a href="/site/it.wikiquote.org/wiki/">https://it.wikiquote.org</a><br>
+            <a href="/site/it.wikibooks.org/wiki/">https://it.wikibooks.org</a><br>
+            <a href="/site/it.wikiversity.org/wiki/">https://it.wikiversity.org</a><br>
+            <a href="/site/it.wikinews.org/wiki/">https://it.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-02-13<br>
-            2015-02-18<br>
-            2015-02-24<br>
-            2015-02-13<br>
-            2015-02-14<br>
-            2015-02-24<br>
-            2015-02-18<br>
+            2015-12-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.4
+            2.5
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itbundle_2015-03-08.7z" class="external text" rel="nofollow">bundle: 2015-03-08</a><br>
+            <a href="https://archive.org/download/Xowa_itwiki_latest/Xowa_itbundle_2015-12-06.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
