--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2015-12-07</b> Italian wiki updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_itwiki_latest" class="external text" rel="nofollow">Italian wikis</a>
+    </li>
+  </ul>
+
   <b>2015-11-29</b> Dutch and Latin wiki updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
