--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,18 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282015-12-13_19:30_Sun.29">Release: NONE (2015-12-13 19:30 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release this week. I've been working on Android-related changes, so there really aren't any significant changes.
+    </p>
+    <p>
+      I posted Arabic wikis at <a href="https://archive.org/details/Xowa_arwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_arwiki_latest</a> I ran into an issue with English Wikipedia though, and am rebuilding the dump. It should be ready by the middle of the week.
+    </p>
+    <p>
+      For 2.12.3, I'm continuing work on the Android version for Simple Wikipedia. For wikis, I'll try to do Russian
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v2.12.1.1_.282015-12-06_21:30_Sun.29">Release: v2.12.1.1 (2015-12-06 21:30 Sun)</span>
     </h2>
     <p>
