--- a/image_dbs.html
+++ b/image_dbs.html
@@ -1615,28 +1615,22 @@
             <a href="https://ar.wikiquote.org/wiki/">https://ar.wikiquote.org</a><br>
             <a href="https://ar.wikibooks.org/wiki/">https://ar.wikibooks.org</a><br>
             <a href="https://ar.wikiversity.org/wiki/">https://ar.wikiversity.org</a><br>
-            <a href="https://ar.wikinews.org/wiki/">https://ar.wikinews.org</a><br>
+            <a href="https://ar.wikinews.org/wiki/">https://ar.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-26<br>
-            2015-04-21<br>
-            2015-04-20<br>
-            2015-04-15<br>
-            2015-04-13<br>
-            2015-04-24<br>
-            2015-04-05<br>
+            2015-12-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-13
+            2015-12-13
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.9
+            7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1646,7 +1640,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_arwiki_latest/Xowa_arbundle_2015-05-05.7z" class="external text" rel="nofollow">wikis and images</a><br>
+            <a href="https://archive.org/download/Xowa_arwiki_latest/Xowa_arbundle_2015-12-06.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
