--- a/image_dbs.html
+++ b/image_dbs.html
@@ -364,6 +364,41 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-12-06
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-12-20
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            5.4<br>
+            10.0
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa (v2b)<br>
+            .sqlite3 (v1)
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_file_v2b.7z" rel="nofollow" class="external text">images.update.2015-12-06.v2b (.xowa)</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-12-06_file_v1.7z" rel="nofollow" class="external text">images.update.2015-12-06.v1 (.xowa)</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
             <a href="https://en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
           </p>
         </td>
@@ -1097,7 +1132,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/it.wikipedia.org/wiki/">https://it.wikipedia.org</a>
+            <a href="https://it.wikipedia.org/wiki/">https://it.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1131,13 +1166,13 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/it.wiktionary.org/wiki/">https://it.wiktionary.org</a><br>
-            <a href="/site/it.wikisource.org/wiki/">https://it.wikisource.org</a><br>
-            <a href="/site/it.wikivoyage.org/wiki/">https://it.wikivoyage.org</a><br>
-            <a href="/site/it.wikiquote.org/wiki/">https://it.wikiquote.org</a><br>
-            <a href="/site/it.wikibooks.org/wiki/">https://it.wikibooks.org</a><br>
-            <a href="/site/it.wikiversity.org/wiki/">https://it.wikiversity.org</a><br>
-            <a href="/site/it.wikinews.org/wiki/">https://it.wikinews.org</a>
+            <a href="https://it.wiktionary.org/wiki/">https://it.wiktionary.org</a><br>
+            <a href="https://it.wikisource.org/wiki/">https://it.wikisource.org</a><br>
+            <a href="https://it.wikivoyage.org/wiki/">https://it.wikivoyage.org</a><br>
+            <a href="https://it.wikiquote.org/wiki/">https://it.wikiquote.org</a><br>
+            <a href="https://it.wikibooks.org/wiki/">https://it.wikibooks.org</a><br>
+            <a href="https://it.wikiversity.org/wiki/">https://it.wikiversity.org</a><br>
+            <a href="https://it.wikinews.org/wiki/">https://it.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
