--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,24 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282015-12-27_22:00_Sun.29">Release: NONE (2015-12-27 22:00 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release again. There were two minor changes, but neither seem to be enough to warrant another version. As always, if anyone notices any serious issues, please do let me know at either <a href="https://github.com/gnosygnu/xowa/issues" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues</a> or gnosygnu at gmail.com .
+    </p>
+    <p>
+      I did release Russian wikis this week. See: <a href="https://archive.org/details/Xowa_ruwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_ruwiki_latest</a>
+    </p>
+    <p>
+      I've spent a lot of time this week on the new Android version. I've actually reached a point this weekend wherein it is working with English Wikipedia.
+    </p>
+    <p>
+      For 3.1.1, I'm going to try to release this new Alpha with for Simple Wikipedia. My aim is to get a release of English Wikipedia shortly afterwards.
+    </p>
+    <p>
+      For wikis, I'll try to do a refresh of French Wikipedia.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_NONE_.282015-12-20_22:00_Sun.29">Release: NONE (2015-12-20 22:00 Sun)</span>
     </h2>
     <p>
