--- a/image_dbs.html
+++ b/image_dbs.html
@@ -1287,28 +1287,32 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-02-12
+            2015-12-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-12-27
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            31
+            26
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-02-12_wiki.7z" rel="nofollow" class="external text">wiki: 2015-02-12</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_001.7z" rel="nofollow" class="external text">images: 2014-10-07 #1</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_002.7z" rel="nofollow" class="external text">images: 2014-10-07 #2</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_003.7z" rel="nofollow" class="external text">images: 2014-10-07 #3</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-02-12_images_update.7z" rel="nofollow" class="external text">images: 2015-02-12</a><br>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-12-06_text.7z" rel="nofollow" class="external text">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-12-06_file_core.7z" rel="nofollow" class="external text">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-12-06_file_ns-000_part-1.7z" rel="nofollow" class="external text">images.main.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-12-06_file_ns-000_part-2.7z" rel="nofollow" class="external text">images.main.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-12-06_file_ns-000_part-3.7z" rel="nofollow" class="external text">images.main.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-12-06_file_ns-100.7z" rel="nofollow" class="external text">images.other</a>
           </p>
         </td>
       </tr>
@@ -1321,35 +1325,32 @@
             <a href="https://ru.wikiquote.org/wiki/">https://ru.wikiquote.org</a><br>
             <a href="https://ru.wikibooks.org/wiki/">https://ru.wikibooks.org</a><br>
             <a href="https://ru.wikiversity.org/wiki/">https://ru.wikiversity.org</a><br>
-            <a href="https://ru.wikinews.org/wiki/">https://ru.wikinews.org</a><br>
+            <a href="https://ru.wikinews.org/wiki/">https://ru.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-02-18<br>
-            2015-02-17<br>
-            2015-02-21<br>
-            2015-02-12<br>
-            2015-01-23<br>
-            2015-02-13<br>
-            2015-02-13<br>
+            2015-12-06
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-12-27
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.9
+            3.2
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_rubundle_2015-02-21.7z" class="external text" rel="nofollow">bundle: 2015-02-21</a><br>
+            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_rubundle_2015-12-06.7z" rel="nofollow" class="external text">wikis and images</a>
           </p>
         </td>
       </tr>
