--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2015-12-27</b> Russian Wikipedia 2015-12 updates released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
+    </li>
+  </ul>
+
   <b>2015-12-20</b> Englis Wikipedia 2015-12 updates released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
